tests/script_errors/lexer_unterminated_ident2/error.txt
Error: 
    1 | let event.`42 = 42;
      |           ^^^^^^^^^ It looks like you forgot to terminate an ident with a closing '`'
    2 | event
